Added Fig 1 data and code to main Rmd

--- a/congress-today.Rmd
+++ b/congress-today.Rmd
@@ -2,7 +2,9 @@
 title: "Reproduction of Congress Today"
 author: "Davies Smith, Emma"
 date: "`r Sys.Date()`"
-output: html_document
+output: 
+  html_document:
+    toc: TRUE
 ---
 
 ```{r setup, include=FALSE}
@@ -18,9 +20,9 @@ When you click the **Knit** button a document will be generated that includes bo
 ## Dependencies
 
 Here are the libraries required by this project:
-```{r libraries}
+```{r libraries, message=F}
 library(tidyverse)
-library(ggplotly)
+library(ggrepel)
 ```
 
 Here are the scripts sourced by this project (stored in R subdirectory):
@@ -30,19 +32,68 @@ Here are the scripts sourced by this project (stored in R subdirectory):
 
 ## Data
 
-Data was originally obtained on Github, and can be accessed from [here](https://github.com/fivethirtyeight/data/tree/master/congress-demographics). A full data dictionary is also available at that location, as README.md. 
+Data was originally obtained on Github, and can be accessed from [here](https://github.com/fivethirtyeight/data/tree/master/congress-demographics). A full data dictionary is also available at that location (README.md). 
 
-The data is also stored in CSV format within the data subdirectory. Variables relevant to the project, and their description, are provided alongside each figure.
+A copy of the data is stored in CSV format within the data subdirectory. Variables relevant to the project, and their description, are also provided with each figure.
 
-```{r data}
+```{r import}
+raw_df <- read.csv('data/data_aging_congress.csv')
+```
 
+```{r process}
+work_df <- raw_df %>%
+  mutate(year = year(start_date))
 ```
 
 
-## Including Plots
+## Figure 1
+```{r}
+fig1_df <- work_df %>% 
+  group_by(year, chamber) %>%
+  summarize(median_age = median(age_years)) %>%
+  ungroup()
+```
 
-You can also embed plots, for example:
+```{r}
+fig1 <- fig1_df %>%
+  ggplot(aes(x=year, y=median_age, col=chamber)) +
+  geom_step(linewidth=0.75) +
+  theme_bw() +
+  scale_x_continuous(breaks = seq(1920, 2020, 20), limits = c(1919, 2023)) +
+  scale_y_continuous(breaks = seq(45, 65, 5), limits = c(45, 66)) +
+  theme(panel.grid.major.x = element_blank(),
+        panel.grid.minor.x = element_blank(),
+        panel.grid.minor.y = element_blank(),
+        panel.border = element_blank(),
+        plot.title = element_text(face = "bold"),
+        legend.position = 'top', 
+        legend.justification = 'left',
+        plot.caption = element_text(hjust=0)) +
+  labs(x='', y='', col='',
+       title = "The House and Senate are older than ever before",
+       subtitle = "Median age of the U.S. Senate and U.S. House by Congress, 1919 to 2023",
+       caption = "Data is based on all members who served in either the Senate or House in each Congress,\nwhich is notated by the year in which it was seated. Any member who served in both chambers\nin the same Congress was assigned to the chamber in which they cast more votes.") 
+```
 
+```{r}
+fig1
+```
 
+## Figure 2
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+fig2_df <- work_df %>%
+  group_by(year, generation) %>%
+  summarize(n_gen = n()) %>%
+  mutate(prop_gen = n_gen / sum(n_gen) * 100) %>%
+  ungroup()
+```
+
+```{r}
+# fig2 <- fig2_df %>%
+#   ggplot(aes(x=year, y=prop_gen, fill=generation)) +
+#   geom_area(position='stack', alpha=0.75)
+# 
+# fig2
+```
+
